# cowboycodr.github.io

./: .gitignore  .pre-commit-config.yaml  about.html  gh-pages.js  index.html  package-lock.json  package.json  pyproject.toml  rxconfig.py  service-worker-index.html  service-worker.js  svelte.config.js
_app/: error.svelte-adbebc97.js  manifest.json  start-4fda7e76.js  start-527a8a89.js  start-9c9e3e44.js  start-c8b5e160.js  start-c97d7ad6.js  version.json
_app/chunks/: loopTypewriter-86ef6ed3.js  scramble-7c453eb0.js  typewriter-68b83b40.js  vendor-15368995.js  writeEffect-173eef86.js
_app/pages/: __layout.svelte-9a39b15f.js  about.svelte-4922a5bc.js  index.svelte-545f2f3b.js
about/: index.html
assets/: styles.css
blog/: index.html
blog/how-can-i-get-involved/: index.html
blog/how-is-sapper-different-from-next/: index.html
blog/how-to-use-sapper/: index.html
blog/what-is-sapper/: index.html
blog/why-the-name/: index.html
client/: _slug_.2c951410.js  _slug_.c023a61f.js  _slug_.c1ca8cc2.js  about-8f1daf66.css  about.8d67bbed.js  about.db517784.js  about.e71c73b9.js  client-ca3e8492.css  client.6dbb6e66.js  client.9d7bb8a5.js  client.fa6b2cb4.js  index-74da05bc.css  index.07201e18.js  index.0f47db1b.js  index.2fbcdccb.js  index.a63d9f62.js  index.a9e1b26a.js  index.c8d919c1.js  resume.081cc3a6.js  resume.cd2080fc.js  resume.f9f149f5.js
client/legacy/: _slug_.0caa3e16.js  _slug_.6eceee33.js  (+16 more)
my_website/: my_website.py  style.py
resume/: index.html
src/: app.css
static/: cat.webp:Zone.Identifier
stevematos_github_io/: stevematos_github_io.py
(+10 files in other folders)
