[tool.poetry]
name = "stevematos-github-io"
version = "0.1.0"
description = "Website Steve Matos"
authors = ["stevematos <steve.matos.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
reflex = "^0.5.0.post1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
